# testing-lab-2

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
rsc/: test-input.txt
src/: main.cpp
src/calculator/: calculator.cpp  calculator.h  calculator_command.cpp  calculator_command.h  calculator_unittest.cpp
src/os/: file_system_io.cpp  file_system_io.h  file_system_io_unittest.cpp
src/parser/: parser-unittest.cpp  parser.cpp  parser.h
